# hsAugerTrinomAnlsH2O

./: .gitignore  Readme.md  amult.cabal  amult.hs  stack.yaml
