name:                amult
version:             1.0.0.0
homepage:            https://github.com/gschenk/hsAugerTrinomAnlsH2O
license:             PublicDomain
license-file:        License.txt
author:              gerald schenk
maintainer:          gschenk@gmx.net
copyright:           (c) 2016 - 2020 gerald schenk
category:            physics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.md

executable amult
  hs-source-dirs:      .
  main-is:             amult.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, time, text
